# PocketScholar-OfflineAIStudyAssistant

./: .gitattributes  .gitmodules  README.md  README.txt
android-app/: README_RAG.md  gradle.properties  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/androidTest/java/com/example/pocketscholar/: ExampleInstrumentedTest.kt
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/assets/: .gitkeep
android-app/app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
android-app/app/src/main/java/com/example/pocketscholar/: MainActivity.kt
android-app/app/src/main/java/com/example/pocketscholar/data/: Chunk.kt  DeviceMemoryManager.kt  Document.kt  DocumentRepository.kt  DocumentStorage.kt  LocalModelScanner.kt  ModelInfo.kt  ModelRepository.kt  PdfChunkExtractor.kt  QuantizationPreference.kt  SettingsRepository.kt  VectorStoreRepository.kt
android-app/app/src/main/java/com/example/pocketscholar/data/db/: AppDatabase.kt  ChunkDao.kt  ChunkEntity.kt  Converters.kt  VectorUtils.kt
android-app/app/src/main/java/com/example/pocketscholar/engine/: BertWordPieceTokenizer.kt  EmbeddingEngine.kt  LlamaEngine.kt  RagService.kt  SentencePieceTokenizer.kt
android-app/app/src/main/java/com/example/pocketscholar/ui/navigation/: AppNavigation.kt
android-app/app/src/main/java/com/example/pocketscholar/ui/screens/: ChatScreen.kt  ChatViewModel.kt  DocumentsScreen.kt  DocumentsViewModel.kt  ModelManagerScreen.kt  ModelManagerViewModel.kt  SettingsScreen.kt  SettingsViewModel.kt  StatsScreen.kt
android-app/app/src/main/java/com/example/pocketscholar/ui/theme/: Color.kt  Theme.kt  Type.kt
android-app/app/src/main/res/values/: strings.xml  themes.xml
android-app/app/src/test/java/com/example/pocketscholar/: ExampleUnitTest.kt
android-app/gradle/: libs.versions.toml
android-app/gradle/wrapper/: gradle-wrapper.properties
